@@ -1,4 +1,4 @@
-$Id: History,v 1.4 1999-05-31 14:48:07 maire Exp $
+$Id: History,v 1.5 1999-08-19 11:42:34 maire Exp $
 --------------------------------------------------
 
      =========================================================
@@ -14,6 +14,11 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+19-08-99 Michel Maire
+- modify ExN03PhysicsList to keep the command setCut compatible
+  with cutForGamma ..etc ..
+       
 31-05-99 Guy Barrand, Michel Maire
 - introduce a command interface based on Motif: G4UIXm   
      
